Revision history for Test-LWP-UserAgent

{{$NEXT}}

0.029     2015-05-23 03:43:46Z
          - add use of Test::RequiresInternet to avoid failing tests on
            smokers that are failing to set NO_NETWORK_TESTING when running
            behind a firewall

0.028     2015-04-10 22:38:29Z
          - report on the versions of more networking modules, to try to track
            down mysterious failed network connections during testing

0.027     2015-02-26 04:57:32Z
          - register_psgi, unregister_psgi, map_response, map_network_response
            and unmap_all all return their invocant, to allow for method
            chaining (Tom Hukins, github #2)

0.026     2014-11-12 03:46:16Z
          - resolve test failure when a prereq is too old

0.025     2014-07-15 02:42:54Z
          - fix examples test that behaves badly on older perls

0.024     2014-07-14 01:32:46Z
          - tests that use the network now respect NO_NETWORK_TESTING as well
            as EXTENDED_TESTING
          - switch from using JSON to JSON::MaybeXS
          - add conditional prereq on latest version of URI, when perl version
            is at 5.21.2 or higher, to get a fix for deprecated \C in regexes

0.023     2014-02-17 01:42:41Z
          - uses of Test::TempDir switched to Path::Tiny
          - removed unneeded use of Class::Load

0.022     2013-11-01 04:01:19Z
          - prevent optional test from failing on perls < 5.10

0.021     2013-10-31 02:24:49Z
          - skip testing examples/ code when optional/undeclared prereqs are
            not available

0.020     2013-10-26 16:31:48Z
          - fixed tests from using example.com to iana.org, to ensure we get a
            302 response when needed
          - converted all uses of Test::NoWarnings to Test::Warnings
          - warnings tests bypassed during installation

0.019     2013-07-22 05:21:27Z
          - switched examples to using object-based syntax, to make it more